Fix auto reload on mobile

--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -128,6 +128,9 @@
             flex-direction: column;
             align-items: flex-start;
 
+            // ngan viec tai lai khi keo xuong 
+            overscroll-behavior: contain;
+            
             overflow-y: auto;
             height: calc(100% - 34px);
         }
